# lametomp3

./: CMakeLists.txt  build.gradle  proguard-rules.pro
src/androidTest/java/com/teligen/lametomp3/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: LameMp3.c  LameMp3.h
src/main/java/com/teligen/lametomp3/: LameMp3.java  Mp3Recorder.java
src/main/res/values/: strings.xml
src/test/java/com/teligen/lametomp3/: ExampleUnitTest.java
